Create to tables to store notifications