@@ -10,14 +10,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.renergetic.hdrapi.dao.NotificationDAO;
+import com.renergetic.hdrapi.dao.NotificationDefinitionDAO;
+import com.renergetic.hdrapi.dao.NotificationScheduleDAO;
 import com.renergetic.hdrapi.exception.InvalidArgumentException;
 import com.renergetic.hdrapi.exception.InvalidCreationIdAlreadyDefinedException;
 import com.renergetic.hdrapi.exception.InvalidNonExistingIdException;
 import com.renergetic.hdrapi.exception.NotFoundException;
-import com.renergetic.hdrapi.model.Notification;
-import com.renergetic.hdrapi.model.NotificationMessages;
-import com.renergetic.hdrapi.repository.NotificationMessagesRepository;
-import com.renergetic.hdrapi.repository.NotificationRepository;
+import com.renergetic.hdrapi.model.NotificationDefinition;
+import com.renergetic.hdrapi.model.NotificationSchedule;
+import com.renergetic.hdrapi.repository.NotificationDefinitionRepository;
+import com.renergetic.hdrapi.repository.NotificationScheduleRepository;
 import com.renergetic.hdrapi.service.utils.OffSetPaging;
 
 @Service
@@ -26,36 +28,40 @@ public class NotificationService {
 	EntityManager entityManager;
 	
 	@Autowired
-	NotificationRepository repository;
+	NotificationScheduleRepository repositorySchedule;
 	
 	@Autowired
-	NotificationMessagesRepository repositoryMessages;
+	NotificationDefinitionRepository repositoryDefinition;
 	
-	public NotificationDAO save(NotificationDAO notification) {
-		if (!validateMessage(notification.getMessage()))
-			throw new InvalidArgumentException("Invalid notification message");
-		if (notification.getId() == null  || !repository.existsById(notification.getId())) {
-			return NotificationDAO.create(repository.save(notification.mapToEntity()));
+	public NotificationDAO save(NotificationScheduleDAO notification) {
+		NotificationDefinition definition = repositoryDefinition.findByCode(notification.getNotificationCode()).orElse(null);
+		if (definition == null)
+			throw new InvalidArgumentException("Invalid notification definition code");
+		if (notification.getId() == null  || !repositorySchedule.existsById(notification.getId())) {
+			return NotificationDAO.create(repositorySchedule.save(notification.mapToEntity(definition)));
 		} else throw new InvalidCreationIdAlreadyDefinedException("Notification with id " + notification.getId() + " already exists");
 	}
 	
-	public NotificationDAO update(NotificationDAO notification) {
-		if (!validateMessage(notification.getMessage()))
-			throw new InvalidArgumentException("Invalid notification message");
-		if (notification.getId() != null  || repository.existsById(notification.getId())) {
-			return NotificationDAO.create(repository.save(notification.mapToEntity()));
+	public NotificationDAO update(NotificationScheduleDAO notification) {
+		NotificationDefinition definition = repositoryDefinition.findByCode(notification.getNotificationCode()).orElse(null);
+		if (definition == null)
+			throw new InvalidArgumentException("Invalid notification definition code");
+		if (notification.getId() != null  && repositorySchedule.existsById(notification.getId())) {
+			return NotificationDAO.create(repositorySchedule.save(notification.mapToEntity(definition)));
 		} else throw new InvalidNonExistingIdException("Notification with id " + notification.getId() + " doesn't exists");
 	}
 	
 	public void deleteById(Long id) {
-		if (id != null  || repository.existsById(id)) {
-			repository.deleteById(id);
+		if (id != null  || repositorySchedule.existsById(id)) {
+			repositorySchedule.deleteById(id);
 		} else throw new InvalidNonExistingIdException("Notification with id " + id + " doesn't exists");
 	}
 	
-	public List<NotificationDAO> get(Long offset, Integer limit) {
-		List<NotificationDAO> notifications = repository.findAll(new OffSetPaging(offset, limit))
-				.stream().map(NotificationDAO::create).collect(Collectors.toList());
+	public List<NotificationDAO> get(Long offset, Integer limit, Boolean showExpired) {
+		List<NotificationDAO> notifications = (showExpired? 
+					repositorySchedule.findAll(new OffSetPaging(offset, limit)).toList()
+					: repositorySchedule.findNotExpired(new OffSetPaging(offset, limit))
+				).stream().map(NotificationDAO::create).collect(Collectors.toList());
 
         if (notifications.size() > 0)
             return notifications;
@@ -63,44 +69,39 @@ public class NotificationService {
 	}
 	
 	public NotificationDAO getById(Long id) {
-		Notification notification =  repository.findById(id).orElse(null);
+		NotificationSchedule notification =  repositorySchedule.findById(id).orElse(null);
 
         if (notification != null)
             return NotificationDAO.create(notification);
         else throw new NotFoundException("No notification with id " + id + " found");
 	}
 	
-	public List<NotificationDAO> getByAssetId(Long assetId) {
-		List<NotificationDAO> notifications =  repository.findByAssetId(assetId)
-				.stream().map(NotificationDAO::create).collect(Collectors.toList());
+	public List<NotificationDAO> getByAssetId(Long assetId, Long offset, Integer limit, Boolean showExpired) {
+		List<NotificationDAO> notifications =  (showExpired? 
+					repositorySchedule.findAll(new OffSetPaging(offset, limit)).toList()
+					: repositorySchedule.findNotExpired(new OffSetPaging(offset, limit))
+				).stream().map(NotificationDAO::create).collect(Collectors.toList());
 
         if (notifications.size() > 0)
             return notifications;
         else throw new NotFoundException("No notifications are found related with asset " + assetId);
 	}
 	
-	public String saveMessage(String message) {
-		if (repositoryMessages.existsById(message))
-			throw new InvalidArgumentException("Message already exists");
+	public NotificationDefinitionDAO saveDefinition(NotificationDefinitionDAO notification) {
+		if (repositoryDefinition.existsByIdOrCode(notification.getId(), notification.getCode()))
+			throw new InvalidArgumentException("Notification definitio already exists");
 		else
-			return repositoryMessages.save(new NotificationMessages(message)).getMessage();
+			return NotificationDefinitionDAO.create(repositoryDefinition.save(notification.mapToEntity()));
 	}
 	
-	public void deleteMessage(String message) {
-		if (message != null  || repositoryMessages.existsById(message)) {
-			repositoryMessages.deleteById(message);
-		} else throw new InvalidNonExistingIdException("Message '" + message + "' doesn't exists");
+	public void deleteDefinition(Long notificationId) {
+		if (notificationId != null  && repositoryDefinition.existsById(notificationId)) {
+			repositoryDefinition.deleteById(notificationId);
+		} else throw new InvalidNonExistingIdException("NotificationDefinition '" + notificationId + "' doesn't exists");
 	}
 	
-	public List<String> getMesagges(Long offset, Integer limit) {
-		return repositoryMessages.findAll(new OffSetPaging(offset, limit))
-				.stream().map(NotificationMessages::toString).collect(Collectors.toList());
-	}
-	
-	public Boolean validateMessage(String message) {
-		if (repositoryMessages.count() > 0)
-			return repositoryMessages.findAll()
-					.stream().anyMatch(allowedMess -> allowedMess.getMessage().equals(message));
-		else return true;
+	public List<NotificationDefinitionDAO> getDefinition(Long offset, Integer limit) {
+		return repositoryDefinition.findAll(new OffSetPaging(offset, limit))
+				.stream().map(NotificationDefinitionDAO::create).collect(Collectors.toList());
 	}
 }
